# EDGE-COVID19

## build 20210607
* add early stop codon aa substitution warning
* add ampliseq adapter
* add aligntrim info on header of result section
* update NCBI batch submitter: add auto-delete option
* Align_trim deal with amplicon_size < read length
* add confirmation pop up before gisaid/genbank submission
* fix genome/sra submission. run in background
* fix empty sample_title when performing SRA submssion
* update Pangolin to 3.0.3 and add its dependencies 
* add metadata input for batch submit, update example EXCEL file with
instructions
* add small test dataset for covid19
* update NCBI genome submission script to work with new NCBI login

## build 20210505
* Batch NCBI SRA submission.
* fix gisaid/NCBI genome submission corresponding to the GISAID/NCBI GUI udpate
* fix bug: fix missing primer scheme fasta files
* add frameshift column for INDELs_report. fix bug on amplicov
* update gisaid batch upload template
* update VOC and VOI check

## build 20210407
* Lowered default threshold for detecting indels in amplicon-based ONT data to 0.6 (from 0.8)
* Add swift primer trim option
* Add Pangolin lineage assignment for consensus genome
* Add INDEL frameshfit warning and link to indel report
* SNP analysis on consenesus changelog with ambiguous code
* Add lineage result link to outbreak.info lineage report
* Add Single project NCBI SRA submission at the project action widget (https://edge-covid19.edgebioinformatics.org/)
* Add Bioproject ID and release-date selection for NCBI genome submission

## build 20210216
* Add funding acknowledgement in about page
* Incorrect uses of align_trim on Illumina samples while trimming the ARTIC primers was fixed by making the trimming strand specific. We recommend rerunning your samples if it was generated using Illumina following the ARTIC protocol.
* Avoid genbank2gff3 write tmp file to read-only system
* Change the working directory to outdir for CharliesCloud, the read-only container