@@ -1238,6 +1238,11 @@ div.edge-collapsible-options .ui-btn {
 }
 
 /*custom ui-icon*/
+.ui-icon-pangolin {
+  background: url(../images/pangolin.png) no-repeat;
+  background-size: 22px 22px;
+  background-position:bottom 5px right 9px;
+}
 .ui-icon-tree {
   background: url(../images/tree.png) 50% 50% no-repeat;
   background-size: 18px 18px;
