@@ -1,5 +1,9 @@
 # EDGE-COVID19
 
+## build 202107
+* variant call using default diploid mode, add VCF QUAL filter
+* add rerun pangolin lineage assignment function in project action widget
+
 ## build 20210607
 * add early stop codon aa substitution warning
 * add ampliseq adapter
